commit2 12-09-2025 (responsive site)

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <h3>O Terno</h3>
                 <div class="content">
                     <div class="img-tb">
-                        <img src="/assets/images/TB-montanha.png" alt="">
+                        <img src="assets/images/TB-montanha.png" alt="">
                     </div>
                     <div class="text">
                         <p>Formada em 2009, a banda O Terno se tornou um dos nomes mais relevantes do rock brasileiro.
@@ -46,18 +46,18 @@
         </section>
         <section id="albuns">
             <h2>Carreira Solo</h2>
-            <div class="content">
+            <div class="content" id="album-recomeçar-content">
                 <div class="text">
                     <h4>Recomeçar (2017)</h4>
                     <p>Esse álbum de estreia marcou a transição de Tim Bernardes para sua carreira solo, revelando um lado mais íntimo e reflexivo de sua composição. Lançado com grande aclamação da crítica e público, Recomeçar é um trabalho que mistura a sofisticação da MPB e a melancolia do folk, com arranjos delicados e letras que exploram temas como solidão, recomeços e a busca por um novo sentido.</p>
                 </div>
                 <div class="img-tb">
-                    <img src="/assets/images/recomeçar-TB.jpg" alt="">
+                    <img src="assets/images/recomeçar-TB.jpg" alt="">
                 </div>
             </div>
-            <div class="content">
+            <div class="content" id="album-mci-content">
                 <div class="img-tb">
-                    <img src="/assets/images/mci-TB.jpg" alt="">
+                    <img src="assets/images/mci-TB.jpg" alt="">
                 </div>
                 <div class="text">
                     <h4>Mil Coisas Invisíveis (2022)</h4>
