commit4 13-09-2025 (responsive discos section) (responsive complete footer) (back to top button function)

--- a/index.html
+++ b/index.html
@@ -79,32 +79,38 @@
                 <div class="content">
                     <div class="grid-discos">
                         <div class="disco">
-                            <a href="#body" onclick="event.preventDefault(); showAlertAndRedirect('https://open.spotify.com/intl-pt/album/6B2dACJHYyu5lO3ws2pBbp?si=FvoJoZfzQcaZTeEIXgugyA');">
+                            <a
+                                href="https://open.spotify.com/intl-pt/album/6B2dACJHYyu5lO3ws2pBbp?si=Et51e-AuTAiLFcpReInqAw" target="_blank">
                                 <img src="assets/images/atrasalem-discos-terno.jpeg" alt="">
                             </a>
                         </div>
                         <div class="disco">
-                            <a href="#body">
+                            <a
+                                href="https://open.spotify.com/intl-pt/album/6bjH9p0ZAdYbHqh8HFvspz?si=aT1bdwiKQ3qq-oSyNw77NQ" target="_blank">
                                 <img src="assets/images/mdqp-terno.jpg" alt="">
                             </a>
                         </div>
                         <div class="disco">
-                            <a href="#body">
-                                <img src="assets/images/66-terno.jpg" alt="">
-                            </a>
-                        </div>
-                        <div class="disco">
-                            <a href="#body">
+                            <a
+                                href="https://open.spotify.com/intl-pt/album/4woRdLXHCk9gTvr7BbtOKX?si=PdnFYxZZQSi4E9NU_oFtSg" target="_blank">
                                 <img src="assets/images/oterno-terno.jpg" alt="">
                             </a>
                         </div>
                         <div class="disco">
-                            <a href="#body">
+                            <a
+                                href="https://open.spotify.com/intl-pt/album/3iNtrqEywG7K98R4lYugx3?si=-xWTYFdZS2Cjjpm1Q2wA2w" target="_blank">
+                                <img src="assets/images/66-terno.jpg" alt="">
+                            </a>
+                        </div>
+                        <div class="disco">
+                            <a
+                                href="https://open.spotify.com/intl-pt/album/0icYpEwVxogZ6mCERLIVpa?si=TWSHnvHqQzeE9hbS2ow3dw" target="_blank">
                                 <img src="assets/images/mci-TB.jpg" alt="">
                             </a>
                         </div>
                         <div class="disco">
-                            <a href="#body">
+                            <a
+                                href="https://open.spotify.com/intl-pt/album/6U97X9SjnkaBf94W5mkTs1?si=d7yDOx1VS_iipRsteB8pLw" target="_blank">
                                 <img src="assets/images/recomeçar-TB.jpg" alt="">
                             </a>
                         </div>
@@ -114,25 +120,30 @@
         </section>
     </main>
     <footer>
-
+        <div class="box">
+            <div class="direct-aura">
+                <p>© 2025 AURA. Inovação e Alma em Cada Linha de Código.</p>
+                <a href="https://equipeaura.github.io/Aura" target="_blank">
+                    <img src="assets/images/aura.svg" alt="">
+                </a>
+            </div>
+            <div class="links">
+                <a
+                    href="https://www.instagram.com/auraequipe?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==" target="_blank">
+                    <img src="assets/images/instagram-logo-footer.png" alt="">
+                </a>
+                <a href="https://github.com/ezno02" target="_blank">
+                    <img src="assets/images/github-logo-footer.png" alt="">
+                </a>
+            </div>
+        </div>
     </footer>
 
     <div class="theme">
         <a href="#body" id="dark-theme">🌙</a>
         <a href="#body" id="light-theme">☀️</a>
     </div>
-    <div class="alert-div">
-        <p>Você será redirecionado para o spotify para visualizar o disco <span id="discoRedirect"></span> Ok? Se você
-            estiver de acordo clice em continuar</p>
-        <div>
-            <a href="" id="cancel">
-                <button>Cancelar</button>
-            </a>
-            <a href="" id="continue">
-                <button>Continuar</button>
-            </a>
-        </div>
-    </div>
+    <button id="backToTopBtn" title="Voltar ao Topo">&#x2191;</button>
     <script src="script.js"></script>
 </body>
 
