--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Tim-Bernardes</title>
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=menu" />
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@40,400,0,0&icon_names=close" />
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="shortcut icon" href="assets/images/aura.svg" type="image/x-icon">
 </head>
@@ -24,10 +25,18 @@
                 </div>
                 <nav>
                     <ul>
-                        <a href="#hero"><li>Home</li></a>
-                        <a href="#terno"><li>O Terno</li></a>
-                        <a href="#albuns"><li>Solo</li></a>
-                        <a href="#discos"><li>Albuns</li></a>
+                        <a href="#hero">
+                            <li>Home</li>
+                        </a>
+                        <a href="#terno">
+                            <li>O Terno</li>
+                        </a>
+                        <a href="#albuns">
+                            <li>Solo</li>
+                        </a>
+                        <a href="#discos">
+                            <li>Albuns</li>
+                        </a>
                     </ul>
                 </nav>
             </div>
@@ -100,38 +109,32 @@
                 <div class="content">
                     <div class="grid-discos">
                         <div class="disco">
-                            <a href="https://open.spotify.com/intl-pt/album/6B2dACJHYyu5lO3ws2pBbp?si=Et51e-AuTAiLFcpReInqAw"
-                                target="_blank">
+                            <a id="atrasAlemLink">
                                 <img src="assets/images/atrasalem-discos-terno.jpeg" alt="">
                             </a>
                         </div>
                         <div class="disco">
-                            <a href="https://open.spotify.com/intl-pt/album/6bjH9p0ZAdYbHqh8HFvspz?si=aT1bdwiKQ3qq-oSyNw77NQ"
-                                target="_blank">
+                            <a id="melhorDoQuePareceLink">
                                 <img src="assets/images/mdqp-terno.jpg" alt="">
                             </a>
                         </div>
                         <div class="disco">
-                            <a href="https://open.spotify.com/intl-pt/album/4woRdLXHCk9gTvr7BbtOKX?si=PdnFYxZZQSi4E9NU_oFtSg"
-                                target="_blank">
+                            <a id="oTernoLink">
                                 <img src="assets/images/oterno-terno.jpg" alt="">
                             </a>
                         </div>
                         <div class="disco">
-                            <a href="https://open.spotify.com/intl-pt/album/3iNtrqEywG7K98R4lYugx3?si=-xWTYFdZS2Cjjpm1Q2wA2w"
-                                target="_blank">
+                            <a id="meiaMeiaLink">
                                 <img src="assets/images/66-terno.jpg" alt="">
                             </a>
                         </div>
                         <div class="disco">
-                            <a href="https://open.spotify.com/intl-pt/album/0icYpEwVxogZ6mCERLIVpa?si=TWSHnvHqQzeE9hbS2ow3dw"
-                                target="_blank">
+                            <a id="milCoisasInvisiveisLink">
                                 <img src="assets/images/mci-TB.jpg" alt="">
                             </a>
                         </div>
                         <div class="disco">
-                            <a href="https://open.spotify.com/intl-pt/album/6U97X9SjnkaBf94W5mkTs1?si=d7yDOx1VS_iipRsteB8pLw"
-                                target="_blank">
+                            <a id="recomecarLink">
                                 <img src="assets/images/recomeçar-TB.jpg" alt="">
                             </a>
                         </div>
@@ -161,6 +164,17 @@
     </footer>
 
     <button id="backToTopBtn" title="Voltar ao Topo">&#x2191;</button>
+    <div class="spotify-box" id="background-spotify">
+        <a id="backToBody">
+            <span class="material-symbols-outlined">
+                close
+            </span>
+        </a>
+        <div class="spotify-container">
+            <div id="spotify-iframe">
+            </div>
+        </div>
+    </div>
     <script src="script.js"></script>
 </body>
 
